fix alignment

--- a/styles.css
+++ b/styles.css
@@ -66,7 +66,8 @@ header {
 .hero {
   display: flex;
   width: 1920px;
-  justify-content: center;
+  justify-content: space-between;
+  padding: 0 300px 0;
 }
 .info {
   display: inline-flex;
@@ -96,9 +97,20 @@ header {
   line-height: 24px; /* 133.333% */
 }
 .info-pic {
+  display: flex;
   width: 536px;
   height: 636px;
   flex-shrink: 0;
+  border-radius: 25px;
+  background: url(./unsplash_wKOKidNT14w.png) white no-repeat;
+  background-position: center top -100px;
+  background-size: auto;
+  box-shadow: 0px 24px 116px 0px rgba(43, 56, 76, 0.09);
+  margin-top: 126px;
+}
+.picture {
+  width: 100%;
+  height: 536px;
 }
 .btnMessage {
   display: flex;
@@ -123,12 +135,13 @@ header {
   align-items: center;
   gap: 12px;
   border-radius: 6px;
+  margin-top: 105px;
 }
 .box {
   display: inline-flex;
   flex-direction: column;
   align-items: flex-start;
-  gap: 12px;
+  gap: 8px;
   border: 1px solid var(--Gray-White, #fff);
   background: rgba(237, 216, 255, 0.5);
 }
@@ -143,11 +156,13 @@ header {
   font-style: normal;
   font-weight: 600;
   line-height: 40px; /* 125% */
+  margin-top: 14px;
 }
 .box p {
   width: 200px;
   color: var(--Gray-500, #697484);
   text-align: center;
+  margin-bottom: 17px;
 
   /* Body/Regular/400 */
   font-family: "Work Sans";
